25 June 2007: Polipo 1.0.1:

        Made Polipo slightly more aggressive when speaking to
        HTTP/1.0 servers (thanks to Fabian Keil for noticing that).
        Fixed a crash that would happen when a client used
        Cache-Control: only-if-cached, and the object was not in cache.
        (Reported by F. Zappa, A. Patala and V. Ghosal.)
        Fixed a descriptor leak when running under Windows.
        Made Polipo optionally drop connections after servicing
        a number of connections (maxConnectionAge and maxConnectionRequests).

6 March 2007: Polipo 1.0.0

        No changes since 0.9.99.2.

7 February 2007: Polipo 0.9.99.2

        Fixed a buffer overflow in urlDirname (the 0.9 branch is not
        vulnerable) (reported by J. P. Larocque).
        Implemented use of IPv6 temporary source addresses (Frank Behrens).
        Disabled use of unaligned range requests by default.  This is
        controlled by the variable allowUnalignedRangeRequests (reported
        by Chris Moore).
        Fixed descriptor leaks in SOCKS error handling (reported by
        Roger Dingledine).
        Implemented maxSideBuffering.

6 February 2007: Polipo 0.9.12

        Fixed incorrect caching of redirects (reported by Lawrence Lu).
        Fixed a possible hang when falling back to gethostbyname
        (reported by Chris Moore).

28 December 2006: Polipo 0.9.99.1

        Validation improvements and bug fixes.
        Don't use cached data when receiving the output from an HTTP/1.0 CGI.
        Allowed tunnelling of IMAP and POP traffic by default.
        Changed the disk cache expiry and indexing functions to use chunks.
        Made the disk cache unreadable by others by default.
        Fixed a bug that could cause stale data to be served after
        a connection failure (reported by Hondza).
        Fixed computation of age and rtt for pipelined requests.
        Fixed incorrect cachability of redirects (reported by J.-P. Larocque).